makefile fix by including poetry extras in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,11 @@ jobs:
       run: |
         poetry config virtualenvs.in-project true
         poetry install
+        poetry install -E dev -E test
 
-    # - name: Run style checks
-    #   run: |
-    #     make check-codestyle
+    - name: Run style checks
+      run: |
+        make check-codestyle
 
     - name: Run tests
       run: |
