--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ pyupgrade = "^2.29.1"
 safety = "^1.10.3"
 coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
+pytest-xdist = "^2.5.0"
 
 [tool.poetry.extras]
 test = [
