--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: stage & preview workflow
+name: stage & preview
 
 # Controls when the action will run.
 on:
