readme and pip dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,17 +3,17 @@
 
 version: 2
 
+# updates:
+#   - package-ecosystem: "pip"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#     allow:
+#       - dependency-type: "all"
+#     commit-message:
+#       prefix: ":arrow_up:"
+#     open-pull-requests-limit: 10
 updates:
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    allow:
-      - dependency-type: "all"
-    commit-message:
-      prefix: ":arrow_up:"
-    open-pull-requests-limit: 10
-
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
