--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 astroid==2.11.7; python_full_version >= "3.7.2"
 atomicwrites==1.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
-attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+attrs==22.1.0; python_version >= "3.6"
 bandit==1.7.4; python_version >= "3.7"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
@@ -33,7 +33,7 @@ pytest-html==3.1.1; python_version >= "3.6"
 pytest-metadata==2.0.2; python_version >= "3.7" and python_version < "4.0"
 pytest-xdist==2.5.0; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
-pyupgrade==2.37.2; python_version >= "3.7"
+pyupgrade==2.37.3; python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.7"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 safety==1.10.3; python_version >= "3.5"
@@ -45,5 +45,5 @@ toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (py
 tomli==1.2.3; python_version < "3.11" and python_full_version >= "3.7.2" and python_version >= "3.6"
 tomlkit==0.11.1; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.7.2"
 typing-extensions==4.3.0; python_version < "3.10" and python_full_version >= "3.7.2" and python_version >= "3.7"
-urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+urllib3==1.26.11; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 wrapt==1.14.1; python_full_version >= "3.7.2"
