--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,8 +90,10 @@ exclude = '''
 )/
 '''
 
-[tool.isort]
 # https://github.com/timothycrosley/isort/
+[tool.isort]
+# multi_line_output = 3
+# include_trailing_comma = true
 py_version = 39
 line_length = 120
 
