--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ exclude = '''
 # include_trailing_comma = true
 py_version = 39
 line_length = 120
+length_sort = true
 
 known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
 sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
