--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,17 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'
+    # inputs:
+    #   logLevel:
+    #     description: 'Log level'     
+    #     required: true
+    #     default: 'warning'
+    #   tags:
+    #     description: 'Test scenario tags'
 
 jobs:
   build:
-    if: ${{ github.event.label.name == 'build' }}
+    # if: ${{ github.event.label.name == 'build' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -58,9 +58,9 @@ jobs:
     - name: Run safety checks
       run: |
         make check-safety
-  printInputs:
-    runs-on: ubuntu-latest
-    steps:
-    - run: |
-        echo "Log level: ${{ github.event.inputs.logLevel }}"
-        echo "Tags: ${{ github.event.inputs.tags }}" 
+  # printInputs:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: |
+  #       echo "Log level: ${{ github.event.inputs.logLevel }}"
+  #       echo "Tags: ${{ github.event.inputs.tags }}" 
