--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -10,13 +10,13 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    inputs:
-      dispatch: true
+    # inputs:
+    #   dispatch: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   publish_dev_build:
-    if: ${{ github.event.label.name == 'preview' || inputs.dispatch == true }}
+    # if: ${{ github.event.label.name == 'preview' || inputs.dispatch == true }}
     runs-on: ubuntu-latest
 
     strategy:
