--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,95 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
+
 default_language_version:
-  python: python3.9
+  python: python3.10
 
 default_stages: [commit, push]
 
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
-    hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
-        exclude: LICENSE
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.5.0
+  hooks:
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+  - id: check-added-large-files
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.1.0
+  hooks:
+  - id: pretty-format-yaml
+    args:
+    - --autofix
+    - --preserve-quotes
+    - --indent=2
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.32.2
+  hooks:
+  - id: markdownlint
+    args:
+    - --fix
+    verbose: true
+    entry: bash -c 'markdownlint "$@" || true' --
+- repo: https://github.com/psf/black
+  rev: 22.3.0
+  hooks:
+  - id: black
+  # args: ["-l 120"]
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+  - id: isort
+    name: isort (python)
+  - id: isort
+    name: isort (cython)
+    types: [cython]
+  - id: isort
+    name: isort (pyi)
+    types: [pyi]
+- repo: https://github.com/pycqa/flake8
+  rev: 4.0.1
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - flake8-bugbear
+    - flake8-comprehensions
+    - flake8-simplify
+    verbose: true
+    entry: bash -c 'flake8 "$@" || true' --
 
-  - repo: local
-    hooks:
-      - id: pyupgrade
-        name: pyupgrade
-        entry: poetry run pyupgrade --py39-plus
-        types: [python]
-        language: system
+# default_language_version:
+#   python: python3.9
 
-  - repo: local
-    hooks:
-      - id: isort
-        name: isort
-        entry: poetry run isort --settings-path pyproject.toml
-        types: [python]
-        language: system
+# default_stages: [commit, push]
 
-  # - repo: local
-  #   hooks:
-  #     - id: black
-  #       name: black
-  #       entry: poetry run black --config pyproject.toml
-  #       types: [python]
-  #       language: system
+# repos:
+#   - repo: https://github.com/pre-commit/pre-commit-hooks
+#     rev: v2.5.0
+#     hooks:
+#       - id: check-yaml
+#       - id: end-of-file-fixer
+#         exclude: LICENSE
+
+#   - repo: local
+#     hooks:
+#       - id: pyupgrade
+#         name: pyupgrade
+#         entry: poetry run pyupgrade --py39-plus
+#         types: [python]
+#         language: system
+
+#   - repo: local
+#     hooks:
+#       - id: isort
+#         name: isort
+#         entry: poetry run isort --settings-path pyproject.toml
+#         types: [python]
+#         language: system
+
+#   - repo: local
+#     hooks:
+#       - id: black
+#         name: black
+#         entry: poetry run black --config pyproject.toml
+#         types: [python]
+#         language: system
