--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,11 +1,11 @@
 [bumpversion]
-current_version = 0.1.2
+current_version = 0.1.0
 commit = True
 tag = True
 
 [bumpversion:file:pyproject.toml]
-search = version = "{current_version}"
-replace = version = "{new_version}"
+search = version = {current_version}
+replace = version = {new_version}
 
 [bumpversion:file:sys_config/__init__.py]
 search = __version__ = "{current_version}"
