--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.9"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4.1.0
+      uses: actions/setup-python@v2.2.2
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -30,7 +30,7 @@ jobs:
       run: make poetry-download
 
     - name: Set up cache
-      uses: actions/cache@v3.0.5
+      uses: actions/cache@v2.1.6
       with:
         path: .venv
         key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
@@ -38,16 +38,15 @@ jobs:
       run: |
         poetry config virtualenvs.in-project true
         poetry install
-        poetry install -E dev -E test
 
-    - name: Run style checks
-      run: |
-        make check-codestyle
+    # - name: Run style checks
+    #   run: |
+    #     make check-codestyle
 
-    - name: Run tests
-      run: |
-        make test
+    # - name: Run tests
+    #   run: |
+    #     make test
 
-    - name: Run safety checks
-      run: |
-        make check-safety
+    # - name: Run safety checks
+    #   run: |
+    #     make check-safety
