poetry lock file -- pip bug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,7 @@
 name: build
 
-# Controls when the action will run.
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [master, main]
-  pull_request:
-    branches: [master, main]
+on: [push, pull_request]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,14 +29,14 @@ jobs:
         poetry config virtualenvs.in-project true
         poetry install
 
-    # - name: Run style checks
-    #   run: |
-    #     make check-codestyle
+    - name: Run style checks
+      run: |
+        make check-codestyle
 
-    # - name: Run tests
-    #   run: |
-    #     make test
+    - name: Run tests
+      run: |
+        make test
 
-    # - name: Run safety checks
-    #   run: |
-    #     make check-safety
+    - name: Run safety checks
+      run: |
+        make check-safety
