--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,15 @@
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool]
 [tool.poetry]
 name = "sys-config"
-version = "0.1.1"
-description = "Awesome `sys-config` is a Python cli/package created with https://github.com/will-wright-eng/cookiecutter-pypackage-slim"
+version = "0.1.0"
+description = "Awesome `sys-config` is a Python cli/package created with https://github.com/TezRomacH/python-package-template"
 readme = "README.md"
 authors = ["sys-config <hello@sys-config.com>"]
 license = "GNU GPL v3.0"
-repository = "https://github.com/will-wright-eng/sys-config"
-homepage = "https://github.com/will-wright-eng/sys-config"
+repository = "https://github.com/sys_config/sys-config"
+homepage = "https://github.com/sys_config/sys-config"
 
 # Keywords description https://python-poetry.org/docs/pyproject/#keywords
 keywords = []  #! Update me
@@ -28,50 +27,33 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3.9",
 ]
 
+
+
 [tool.poetry.dependencies]
 python = "^3.9"
-black = {version = "^21.10b0", allow-prereleases = true, optional = true}
-isort = {extras = ["colors"], version = "^5.10.1", optional = true}
-flake8  = { version = "^3.9.2", optional = true}
-flake8-docstrings = { version = "^1.6.0", optional = true }
-mypy = {version = "^0.900", optional = true}
-mypy-extensions = "^0.4.3"
-pytest  = { version = "^6.2.4", optional = true}
-pytest-cov  = { version = "^2.12.0", optional = true}
-pytest-html = "^3.1.1"
-virtualenv  = { version = "^20.2.2", optional = true}
-pip  = { version = "^20.3.1", optional = true}
-twine  = { version = "^3.3.0", optional = true}
-mkdocs-autorefs = {version = "^0.2.1", optional = true}
-pre-commit = {version = "^2.12.0", optional = true}
-toml = {version = "^0.10.2", optional = true}
-bump2version = {version = "^1.0.1", optional = true}
+
+[tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
+black = {version = "^21.10b0", allow-prereleases = true}
 darglint = "^1.8.1"
+isort = {extras = ["colors"], version = "^5.10.1"}
+mypy = "^0.910"
+mypy-extensions = "^0.4.3"
+pre-commit = "^2.15.0"
 pydocstyle = "^6.1.1"
 pylint = "^2.11.1"
+pytest = "^6.2.5"
 pyupgrade = "^2.29.1"
 safety = "^1.10.3"
 coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
-
-[tool.poetry.extras]
-test = [
-    "pytest",
-    "black",
-    "isort",
-    "mypy",
-    "flake8",
-    "flake8-docstrings",
-    "pytest-cov"
-    ]
-
-dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]
+pytest-html = "^3.1.1"
+pytest-cov = "^3.0.0"
 
 [tool.black]
 # https://github.com/psf/black
 target-version = ["py39"]
-line-length = 120
+line-length = 200
 color = true
 
 exclude = '''
@@ -93,7 +75,7 @@ exclude = '''
 [tool.isort]
 # https://github.com/timothycrosley/isort/
 py_version = 39
-line_length = 120
+line_length = 200
 
 known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
 sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
