--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,33 +3,33 @@
 
 version: 2
 
-# updates:
-#   - package-ecosystem: "pip"
-#     directory: "/"
-#     schedule:
-#       interval: "weekly"
-#     allow:
-#       - dependency-type: "all"
-#     commit-message:
-#       prefix: ":arrow_up:"
-#     open-pull-requests-limit: 10
 updates:
-- package-ecosystem: "github-actions"
-  directory: "/"
-  schedule:
-    interval: "weekly"
-  allow:
-  - dependency-type: "all"
-  commit-message:
-    prefix: ":arrow_up:"
-  open-pull-requests-limit: 10
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    allow:
+      - dependency-type: "all"
+    commit-message:
+      prefix: ":arrow_up:"
+    open-pull-requests-limit: 50
 
-- package-ecosystem: "docker"
-  directory: "/docker"
-  schedule:
-    interval: "weekly"
-  allow:
-  - dependency-type: "all"
-  commit-message:
-    prefix: ":arrow_up:"
-  open-pull-requests-limit: 10
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    allow:
+      - dependency-type: "all"
+    commit-message:
+      prefix: ":arrow_up:"
+    open-pull-requests-limit: 50
+
+  - package-ecosystem: "docker"
+    directory: "/docker"
+    schedule:
+      interval: "weekly"
+    allow:
+      - dependency-type: "all"
+    commit-message:
+      prefix: ":arrow_up:"
+    open-pull-requests-limit: 50
