--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,14 +29,14 @@ jobs:
         poetry config virtualenvs.in-project true
         poetry install
 
-    - name: Run style checks
-      run: |
-        make check-codestyle
+    # - name: Run style checks
+    #   run: |
+    #     make check-codestyle
 
-    - name: Run tests
-      run: |
-        make test
+    # - name: Run tests
+    #   run: |
+    #     make test
 
-    - name: Run safety checks
-      run: |
-        make check-safety
+    # - name: Run safety checks
+    #   run: |
+    #     make check-safety
