--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,7 +6,7 @@ name: stage & preview
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, main ]
+    branches: [master, main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,30 +24,29 @@ jobs:
         python-version: ["3.9", "3.10"]
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4.1.0
-        with:
-          python-version: ${{ matrix.python-versions }}
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4.1.0
+      with:
+        python-version: ${{ matrix.python-versions }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry tox tox-gh-actions
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry tox tox-gh-actions
 
-      - name: test with tox
-        run:
-          tox
+    - name: test with tox
+      run: tox
 
-      - name: Build wheels and source tarball
-        run: |
-          poetry version $(poetry version --short)-dev.$GITHUB_RUN_NUMBER
-          poetry version --short
-          poetry build
+    - name: Build wheels and source tarball
+      run: |
+        poetry version $(poetry version --short)-dev.$GITHUB_RUN_NUMBER
+        poetry version --short
+        poetry build
 
-      - name: publish to Test PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN}}
-          repository_url: https://test.pypi.org/legacy/
-          skip_existing: true
+    - name: publish to Test PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.TEST_PYPI_API_TOKEN}}
+        repository_url: https://test.pypi.org/legacy/
+        skip_existing: true
