--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+**/Untitled*
+Untitled*
+**/test*
+test*
 
 # Created by https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,python,pycharm,windows,visualstudio,visualstudiocode
@@ -5,6 +9,8 @@
 ### OSX ###
 # General
 .DS_Store
+*/*.DS_Store
+**/.DS_Store
 .AppleDouble
 .LSOverride
 
